--- a/css/rubik.css
+++ b/css/rubik.css
@@ -21,6 +21,9 @@
     -moz-transform-style: preserve-3d;
 }
 
+#cube-controls{
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+}
    
 #cube .cubie{
     position:absolute;
@@ -143,6 +146,10 @@ background-image: -webkit-gradient(
 );
 }
 /* TEXT ROTATIONS */
+.textLeft{-webkit-transform: rotate(-90deg)}
+.textDown{-webkit-transform: rotate(-180deg)}
+.textRight{-webkit-transform: rotate(90deg)}
+
 
 /* PLANES & ROTATIONS */
 
