--- a/css/styles.css
+++ b/css/styles.css
@@ -45,3 +45,18 @@
     margin-left: auto;
     margin-right: auto;
 }
+
+#color-pickers-tab{
+    height: 5vh;
+    width: 65vw;
+    margin: auto;
+}
+
+.color-picker{
+    margin-left: 1vw;
+    margin-right: 1vw;
+    border: 1px black solid; 
+    float:left;
+    height: 5vh;
+    width: 8vw;
+}
