--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@
     margin: 0!important;
     padding: 0!important;
     border: 0 !important;
+    background-color:rgb(0,255,0) !important;
 }
 
 .content{
@@ -17,6 +18,7 @@
     margin: 0!important;
     padding: 0!important;
     border: 0 !important;
+    background-color:rgb(0,255,0) !important;
 }
 
 #rubik{
